Migrate to match new Value API